--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "angular-imask": "^7.6.1",
+    "angular-in-memory-web-api": "^0.19.0",
+    "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
+    "currency-formatter": "^1.5.9",
+    "jquery": "^3.7.1",
+    "moment": "^2.30.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.0",
     "rxjs": "~7.8.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
